# fastapi-example

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitlint  Dockerfile  LICENSE  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md  Feature.md
alembic/: env.py  script.py.mako
alembic/versions/: 20211203_174557_.py
app/: web.py  worker.py
app/common/: README.md  dramatiq.py  errors.py  filter.py  pydantic.py  strings.py
app/common/db/: __init__.py  main.py  methods.py  mixins.py  types.py
app/compositions/: README.md
app/db/: models.py  session.py
app/domains/user/: cron_tasks.py  db.py  models.py  tasks.py
app/patches/: README.md  main.py  sqlalchemy.py  sqlmodel.py
app/services/webapi/: deps.py  url.py
app/services/webapi/views/: user.py
app/settings/: main.py
app/tests/: conftest.py
app/tests/common/: test_strings.py
app/tests/domains/user/db/: test_user.py
app/tests/domains/user/logic/: test_common.py  test_user.py
app/tests/services/webapi/: test_user.py
app/tests/services/webapi/views/: test_user.py
app/tests/utils/: common.py
app/tests/utils/domains/: user.py
git/hooks/: commit-msg  pre-commit
